--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!--Grid Section: Feel free to change the elements -->
     <div class="uk-width-large-1-2 uk-grid"> <!-- Container -->
-      <div class="uk-width-large-1-2 uk-pull-3-5">
+      <div class="uk-width-large-1-2 uk-pull-2-5">
         <a href="#"><img src=""></a>
       </div>
       <div class="uk-width-large-1-2 uk-pull-2-5">
@@ -101,13 +101,13 @@
         <div class="uk-width-small-1-2">
           <a href="#"> <img src=""> </a>
         </div>
-        <div>
+        <div class="uk-width-small-1-2">
           <p> Roshini Pinto-Powell, a professor at the Geisel School of Medicine,
              discusses an ongoing pay gap between female and male doctors.
              The exact size of this gap varies from study to study―by which
              I mean it ranges from bad to worse. </p>
         </div>
-        <div>
+        <div class="uk-width-small-1-2">
           <h3>EVENTS</h3>
           <p> APRIL 11 <br> Presidential Faculty Lecture: Sexual Violence, Social Meanings, and Narrative Selves </p>
           <p> APRIL 11 <br> Workshop: Introduction to Entrepreneurship, Daniella Reichstetter, Tuck 07, Tuck School of Business </p>
@@ -151,12 +151,12 @@
     </div>
     <hr class="uk-grid-divider"/>
     <div class="uk-grid">
-      <div class="uk-width-large-1-2" data-uk-scrollspy="{cls:'uk-animation-fade', target:'.animate-me', repeat:'true', delay:300}">
+      <div class="uk-width-large-1-2" data-uk-scrollspy="{cls:'uk-animation-fade', repeat:'true', delay:300}">
         <a href="#">
           <img src="img/scrollspy-3.jpg">
         </a>
       </div>
-      <div class="uk-width-large-1-2">
+      <div class="uk-width-large-1-2" data-uk-scrollspy="{cls:'uk-animation-fade', repeat: true}">
         <a href="#">
           <img src="img/scrollspy-4.jpg">
         </a>
